<resources>
    <string name="server_client_id" translatable="false">1041765452539-hvj56ve84k5kuco3ska6m3imqf7degqo.apps.googleusercontent.com</string>
    <string name="app_name">Bthere</string>
    <string name="facebook_app_id" translatable="false">580458408787483</string>
    <string name="looking_for_location">looking for your specific location</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="no_connection">you are offline!</string>
    <string name="no_connection_try_again">there is no connection to the internet. Try again?</string>
    <string name="Advertisement">פרסומות.. פרסומות... פרסומות.. פרסומות... פרסומות... פרסומות... </string>
    <string name="title_fragment_business_profile">Business Profile Page</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="You_registered">נרשמת למערכת</string>
    <string name="payment">payment</string>
    <string name="domain">section</string>
    <string name="areaD">region</string>
    <string name="from_hour">from time:</string>
    <string name="dateLike">wanted date</string>
    <string name="hours">hours</string>
    <string name="timeHours">range</string>
    <string name="hour">hour</string>
    <string name="search">search</string>
    <string name="cancel_qweue_">cancel this appointment</string>
    <string name="delay">slight late</string>
    <string name="send_delay">send "I\'ll be late" message</string>
    <string name="definitions">settings</string>
    <string name="personal_datails">personal details</string>
    <string name="delete_customer">remove client</string>
    <string name="add_new_worker">add new client</string>
    <string name="credit_card">pay with credit card</string>
    <string name="thank_you">thank you very much</string>
    <string name="ok_by_provider_1">you can see your appointment in ypur personal calender,</string>
    <string name="ok_by_provider_2">and we will remind you about your appointment a day before it happeneds</string>
    <string name="your_ask_1">your request has sent to</string>
    <string name="your_ask_2">confirm</string>
    <string name="send_">send confirmation message</string>
    <string name="no_internet_connection">no internet connection</string>
    <string-array name="new_operation">
        <item>הנחה</item>
        <item>1+1</item>
        <item>50%</item>
    </string-array>
    <string name="general_error_msg">oops! Unexpected error :( please try again later</string>
    <string name="customers_number">מס\' לקוחות במקביל</string>
    <string name="attention">message</string>
    <string name="qweue_canceled">the appointment has benn canceled</string>
    <string name="details_not_exist">we are sorry, but the username or password you\'ve entered are wrong</string>
    <string name="verification_error">wrong authentication code</string>
    <string name="verification_empty">please enter authentication code</string>
    <string name="customers_in_parallel">מס\' לקוחות במקביל</string>
    <string name="service_product">product/service name</string>
    <string name="if_to_see">do you want to show your clients your price list?</string>
    <string name="if_to_see_1">do you want to show the client</string>
    <string name="price">price (NIS)</string>
    <string name="client_min">minimal number of clients</string>
    <string name="client">mupltiple clients selection</string>
    <string name="less_1">special discount for inviting series of appointments</string>
    <string name="less_2">special discount for inviting several products</string>
    <string name="delete_q">are you sure you want do remove</string>
    <string name="time_period">break duration</string>
    <string name="giving_service">employees</string>
    <string name="checking_a_few">(you can mark many)</string>
    <string name="discount">special discount for inviting several appointments/products</string>
    <string name="discount1">הנחה בהזמנת סדרת</string>
    <string name="discount2">תורים / 2 מוצרים ויותר</string>
    <string name="sav">save</string>
    <string name="save">save and continue</string>
    <string name="initial_calendar_view">basic calender view</string>
    <string name="Opening_date_calendar">תאריך פתיחת היומן</string>
    <string name="que_limit_set_app1">do you want to limit</string>
    <string name="que_limit_set_app">do you want to limit the number of appointments this client can make?</string>
    <string name="que_limit_set_app2">number of appointments</string>
    <string name="meetings_number">number of meetings</string>
    <string name="length_of_queues">scheduling duration (in weeks)</string>
    <string name="syn_with_google_calendar">sync with google calender as default</string>
    <string name="syn_with_my_calendar">sync with my calender</string>
    <string name="voters">ranks %1$s</string>
    <string name="ranking_">ranking: %1$s</string>
    <string name="way"> %1$s , %2$s km ahead.</string>
    <string name="allDays">mark all days</string>
    <string name="paymentTitle">payment type</string>
    <string name="numCard">credit card number</string>
    <string name="validity">exparation date</string>
    <string name="tz">ID</string>
    <string name="send">send</string>
    <string name="errornumbers">enter 3 digits</string>
    <string name="eEmpty">don\'t forget to fill all mandatory fields :)</string>
    <string name="eDate">the date cannot be earlier than today</string>
    <string name="eNumbers">enter 3 digits</string>
    <string name="eTz">please enter valid id</string>
    <string name="new_qwestion">new question</string>
    <string name="date">date</string>
    <string name="owner_of_card">credit card owner name</string>
    <string name="number_of_Payments">number of payments</string>
    <string name="ok_payment">accept and pay</string>
    <string name="enter_txt">enter your text here</string>
    <string name="s_space_time_text">time span (minutes)</string>
    <string name="number">number</string>
    <string name="street">street</string>
    <string name="city">city</string>
    <string name="star" translatable="false">*</string>
    <string name="open_camera">take a picture</string>
    <string name="choose_from_gallery">choose from photo gallery</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="Wait_for_loading_the_selected_service_provider_calendar">המתן לטעינת יומן ספק</string>
    <string name="Wait_for_loading_the_results">wait for search results</string>
    <string name="first_name">name</string>
    <string name="last_name">last name</string>
    <string name="last_name_">*last name</string>
    <string name="phone1">telephone</string>
    <string name="phone__">*phone number</string>
    <string name="mail1">email</string>
    <string name="name_worker">username</string>
    <string name="password">password</string>
    <string name="order">order appointment</string>
    <string name="navigate">navigate</string>
    <string name="details_qweue">appointment details </string>
    <string name="shoe_bussiness_title">rank the business</string>
    <string name="cancel_qweue">cancel this appointment</string>
    <string name="bussiness_page">to the business page</string>
    <string name="what_do_you_think_of">tell us what do think about this business</string>
    <string name="search_results">search results</string>
    <string name="add_question">add question</string>
    <string name="_question_"><![CDATA[common q&a]]></string>
    <string name="to_movie">to_the_movie</string>
    <string name="bthere_phone" translatable="false">050-6872077</string>
    <string name="bthere_mail" translatable="false">Bthere@gmail.com</string>
    <string name="regulation_to_user_txt">הסבר אודות האפליקציה, המקימים, המטרות וכו‘.
תצטנפל בלינדו למרקל אס לכימפו, דול, צוט
ומעיוט - לפתיעם ברשג - ולתיעם גדדיש. קוויז דומור
ליאמום בלינך רוגצה. לפמעט.
קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח.
עמחליף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי
צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה
שיצמה ברורק. קוואזי במר מודוף. אודיפו בלאסטיק
מונופץ קליר, בנפת נפקט למסון בלרק - וענוף
לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
בליא.</string>
    <string name="sort_by">sort by:</string>
    <string name="working_hours">working hours</string>
    <string name="reg_name" translatable="false">[A-Z][A-Za-z]*</string>
    <string name="reg_phone" translatable="false">^[7-9][0-9]{9}$</string>
    <string name="reg_mail" translatable="false">^[A-Za-z][A-Za-z0-9]*([._-]?[A-Za-z0-9]+)@[A-Za-z].[A-Za-z]{0,3}?.[A-Za-z]{0,2}$</string>
    <string name="name_not_correct">oops :) wrong name</string>
    <string name="mail_not_correct">incorrect email</string>
    <string name="phone_not_correct">incorrect phone number</string>
    <string name="item_voters">ranks</string>
    <string name="item_distance">km from you</string>
    <string name="ranking">ranking</string>
    <string name="rankings">ranks</string>
    <string name="add_service">add servise/product</string>
    <string name="back">return</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="list">list</string>
    <string name="about_us">abour our company</string>
    <string name="about_the_application">הסבר אודות האפליקציה, המקימים, המטרות וכו‘.
תצטנפל בלינדו למרקל אס לכימפו, דול, צוט ומעיוט -
לפתיעם ברשג - ולתיעם גדדיש. קוויז דומור ליאמום
בלינך רוגצה. לפמעט.\n\n
קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח.
עמחליף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי
צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה
שיצמה ברורק. קוואזי במר מודוף. אודיפו בלאסטיק
מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי
בלוף קינץ תתיח לרעח. לת צשחמי צש בליא.
    </string>
    <string name="report_operational_utilization">דוח ניצולת תפעולית</string>
    <string name="utilize_in_month_1">this month you used</string>
    <string name="utilize_in_month_num_1">654</string>
    <string name="utilize_in_month_2">out of</string>
    <string name="utilize_in_month_3">hours</string>
    <string name="utilize_in_month_num_2">720</string>
    <string name="division_of_month">התפלגות חדשה</string>
    <string name="contact_list_string">why sould you cync your cantacts list? The answer is simple</string>
<string name="contact_list_answer2">24/7 and keep your clients closer than ever.syncronizing your contacts list in your phone will help you and clients save precious time. Each client can see your schedule and set his own appointment in just a click - whenever you can, wherever your client is.
</string>
    <string name="contact_list_answer1">we offer you to publish your business</string>
    <string name="required">*required field</string>
    <string name="site_error">wrong website :(</string>
    <string name="chet_pe_error">please enter valid cn (company number according to registrar of companies)</string>
    <string name="bussiness_name_error">please enter valid business name</string>
    <string name="phoneerror2">wrong number :(</string>
    <string name="from_date">from date:</string>
    <string name="help">help</string>
    <string name="business_name">name of company</string>
    <string name="business_ch_p">id/cn(company number according to registrar of companies)</string>
    <string name="business_phone">business phone number</string>
    <string name="business_fax">fax number</string>
    <string name="business_site">formal web address</string>
    <string name="business_email">email address</string>
    <string name="mailerror">to set an appointment</string>
    <string name="faxerror">please enter valid fax number with 9 digits</string>
    <string name="ok">accept</string>
    <string name="continue2">continue</string>
    <string name="to_date">to date</string>
    <string name="to_the_movie">to instuction video</string>
    <string name="to_the_regulations">user and privacy agreement</string>
</resources>