<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pic_supplier_x1"
    tools:context="webit.bthereapp.Screens.Supplier.AboutUsFragment"
    android:orientation="vertical">


    <webit.bthereapp.CustemViews.Fonts.CustomBoldTextView
        android:layout_marginTop="27.5dp"
        android:layout_marginBottom="27.5dp"
        style="@style/h1"
        android:layout_gravity="center"
        android:textColor="@color/light_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us" />

    <webit.bthereapp.CustemViews.Fonts.CustomLightTextView
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        style="@style/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_the_application"/>

    <webit.bthereapp.CustemViews.Fonts.CustomLightButton
        style="@style/t1"
        android:id="@+id/regulations"
        android:layout_gravity="center"
        android:layout_marginTop="56.5dp"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:background="@color/light_blue"
        android:text="@string/to_the_regulations"
        android:paddingStart="7dp"
        android:paddingEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />

    <webit.bthereapp.CustemViews.Fonts.CustomLightButton
        style="@style/t1"
        android:id="@+id/movie"
        android:layout_gravity="center"
        android:layout_marginTop="15.5dp"
        android:textColor="@color/color_white"
        android:background="@color/light_blue"
        android:text="@string/to_the_movie"
        android:textAllCaps="false"
        android:paddingStart="7dp"
        android:paddingEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />
</LinearLayout>
