<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <webit.bthereapp.CustemViews.Fonts.CustomBoldTextView
        android:id="@+id/title"
        style="@style/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="27.5dp"
        android:layout_marginTop="27.5dp"
        android:text="@string/about_us"
        android:textColor="@color/orange" />

    <webit.bthereapp.CustemViews.Fonts.CustomLightTextView
        android:id="@+id/txt"
        style="@style/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/about_the_application" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="top"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <webit.bthereapp.CustemViews.Fonts.CustomLightButton
            android:id="@+id/regulations"
            style="@style/t1"
            android:layout_width="wrap_content"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:layout_height="35dp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:background="@color/orange"
            android:text="@string/to_the_regulations"
            android:textColor="@color/color_white" />
        <!--android:layout_marginTop="36.5dp"-->
        <webit.bthereapp.CustemViews.Fonts.CustomLightButton
            android:id="@+id/movie"
            style="@style/t1"
            android:visibility="gone"
            android:layout_width="153.5dp"
            android:textAllCaps="false"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="15.5dp"
            android:background="@color/orange"
            android:text="@string/to_the_movie"
            android:textColor="@color/color_white" />

        <webit.bthereapp.CustemViews.Fonts.CustomLightButton
            android:id="@+id/help"
            style="@style/t1"
            android:layout_width="153.5dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:visibility="gone"
            android:layout_marginTop="15.5dp"
            android:background="@color/orange"
            android:text="@string/help"
            android:textColor="@color/color_white" />
    </LinearLayout>
</LinearLayout>
